test/tests/packages/lets_nonlet/nonlet.txt
error: `lets.tql` may only contain `let` bindings
 --> <packages/nonletpkg/lets.tql>:2:1
  |
2 | from {x: 1}
  | ^^^^^^^^^^^ 
  |
  = note: in package `nonletpkg`
